--- a/spring-rest-demo-1/src/main/resources/application.properties
+++ b/spring-rest-demo-1/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+
+
+spring.jackson.serialization.indent-output=true
+spring.jackson.deserialization.fail-on-unknown-properties=true
