--- a/spring-rest-demo-1/src/main/resources/application.properties
+++ b/spring-rest-demo-1/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.datasource.password=
 
 spring.jackson.serialization.indent-output=true
 spring.jackson.deserialization.fail-on-unknown-properties=true
+spring.jackson.serialization.use-equality-for-object-id=true
