--- a/spring-rest-demo-1/src/main/resources/application.properties
+++ b/spring-rest-demo-1/src/main/resources/application.properties
@@ -10,4 +10,9 @@ spring.datasource.password=
 
 spring.jackson.serialization.indent-output=true
 spring.jackson.deserialization.fail-on-unknown-properties=true
-spring.jackson.serialization.use-equality-for-object-id=true
+
+
+server.port=8443
+server.ssl.key-store=classpath:keystore.keystore
+server.ssl.key-store-password=123456
+server.ssl.key-password=123456
